--- a/colombian-holidays-calculator/pom.xml
+++ b/colombian-holidays-calculator/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>sw.malm.utilities.dates</groupId>
-  <artifactId>colombian_holidays_calculator</artifactId>
+  <groupId>com.github.marlonlom</groupId>
+  <artifactId>colombian-holidays-calculator</artifactId>
   <version>1.0.0</version>
   <name>colombian-holidays-calculator</name>
   <description>Java library for providing calculation of colombian holidays</description>
@@ -22,6 +22,20 @@
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
       <version>20250517</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/junit/junit -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.2</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>3.12.4</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
   <build>
